--- a/requirements.txt
+++ b/requirements.txt
@@ -5,8 +5,8 @@ docx2txt
 requests
 beautifulsoup4
 selenium
-webdriver-manager
 spacy
+en_core_web_sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.1/en_core_web_sm-3.7.1.tar.gz
 langchain
 langchain-google-genai
 faiss-cpu
